--- a/client/src/app/member-unlink/member-unlink.component.html
+++ b/client/src/app/member-unlink/member-unlink.component.html
@@ -1,6 +1,6 @@
 <div ngbDropdown class="d-inline-block">
   <button class="btn btn-outline-danger" id="member" ngbDropdownToggle>
-    <span class="fa fa-link"></span>
+    <span class="fa fa-unlink"></span>
     <span>Unlink</span>
   </button>
   <div ngbDropdownMenu aria-labelledby="member">
