--- a/client/src/app/member-edit/member-edit.component.html
+++ b/client/src/app/member-edit/member-edit.component.html
@@ -19,6 +19,10 @@
       <input type="text" class="form-control" id="familyName" name="familyName" placeholder="Enter Family Name" [(ngModel)]="member.familyName" />
     </div>
     <div class="form-group">
+      <label for="name">Initials</label>
+      <input type="text" class="form-control" id="initals" name="initals" placeholder="Enter Initals" [(ngModel)]="member.initials" />
+    </div>
+    <div class="form-group">
       <label for="alternateFamilyName">Alternate Family Name</label>
       <input type="text" class="form-control" id="alternateFamilyName" name="alternateFamilyName" placeholder="Enter Alternate Family Name" [(ngModel)]="member.alternateFamilyName" />
     </div>
