--- a/client/src/app/member-list/member-list.component.html
+++ b/client/src/app/member-list/member-list.component.html
@@ -7,7 +7,7 @@
     <div *ngIf="membersHolder">
       <nav>
         <ul class="pagination">
-          <li class="page-item" *ngFor="let number of numbers">
+          <li class="page-item" [ngClass]="{'active': (number == previousPage) }" *ngFor="let number of numbers">
             <a class="page-link" (click)="loadPage(number)">{{number+1}}</a>
           </li>
         </ul>
