--- a/client/src/app/member/member.component.html
+++ b/client/src/app/member/member.component.html
@@ -1,7 +1,7 @@
 <div class="card" style="width: 30rem;" *ngIf="member">
   <div class="card">
     <div class="card-header">
-      {{member.name}}
+      {{member.name}} {{member.initials}}
       <div class="btn-group float-right" role="group" aria-label="Member Options">
         <button type="button" class="btn btn-outline-primary" *ngIf="member.gender=='MALE'" (click)="fetchRelated('son', 'Son(s)')">Son</button>
         <button type="button" class="btn btn-outline-secondary" *ngIf="member.gender=='MALE'" (click)="fetchRelated('daughter', 'Daughter(s)')">Daughter</button>
