--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,15 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">{{title}}</a>
+  <a class="navbar-brand" routerLink="/">{{title}}</a>
   <button class="navbar-toggler"  [ngClass]="{'collapsed': isIn }" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleState()">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav" [ngClass]="{'show': isIn }">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/" routerLinkActive="active">Home</a>
+        <a class="nav-link" routerLink="/list" routerLinkActive="active">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/cyto-render" routerLinkActive="active">Cytoscape Rendering</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0" (ngSubmit)="membersList.getAllByName(name)">
+    <form class="form-inline my-2 my-lg-0" (ngSubmit)="getAllByName(name)">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="name" [(ngModel)]="name" />
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
@@ -17,5 +20,5 @@
 </nav>
 <br />
 <div class="container">
-  <app-member-list #membersList></app-member-list>
+  <router-outlet></router-outlet>
 </div>
